--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -12,7 +12,7 @@
     padding:5px;
     width: auto;
     height:max-content;
-    margin: 2rem 2rem;
+    margin: 1rem .5rem;
     background-color:lightblue;
 }
 
